# barber-shop

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
back-end/: app.js  firebaseConfig.js  package-lock.json  routes.js
back-end/chaves/: serviceAccountKey-example.json  serviceAccountKey.json
back-end/controllers/: agendamentosController.js
back-end/services/: agendamentosService.js  apiAuth.js
back-end/utils/: validation.js
backend/: Dockerfile  app.js  cred-example.json  firebaseConfig.js  main.py  package-lock.json  package.json  pyproject.toml
backend/controllers/: agendamentosController.js
backend/core/: firebase_config.py
backend/keys/: serviceAccountKey-example.json
backend/routers/: schedule.py
backend/routes/: agendamentosRoutes.js
backend/schemas/: schedule.py
backend/services/: agendamentosService.js
backend/utils/: validation.js
front-end/: package-lock.json  package.json
front-end/src/: main.js
front-end/src/components/: Dashboard.vue  Edit.vue  History.vue  Login.vue  Register.vue
front-end/src/router/: index.js
front-end/src/views/: Register.vue
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/views/: Agendar.vue  Editar.vue  HomeView.vue  Listar.vue  Login.vue  Register.vue
