[tool.poetry]
name = "barber-shop-apis"
version = "0.1.0"
description = ""
authors = ["Rafael Fortes <rafaeldsfortes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
firebase-admin = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
